--- a/views/admin/userAll.ejs
+++ b/views/admin/userAll.ejs
@@ -1,3 +1,4 @@
+<h1 style="text-align: center; font-weight: 600;">DANH SÁCH TÀI KHOẢN NGƯỜI DÙNG</h1>
 <div class="container">
     <div id="table">
         <% if(userAll) { %>
