--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -77,6 +77,10 @@
                                                                                                                 <% } %>
 
     </div>
+    <script>
+
+
+    </script>
 </body>
 
 </html>
