--- a/views/admin/showtime.ejs
+++ b/views/admin/showtime.ejs
@@ -1,198 +1,197 @@
-<h1 style="text-align: center">BẢNG SUẤT CHIẾU</h1>
-
-<div class="container">
-    <div id="table">
-        <% if(showtime) { %>
-            <table>
-                <tr>
-                    <th>STT</th>
-                    <th>Rạp - Cụm rạp</th>
-                    <th>Phim</th>
-                    <th>Ngày chiếu </th>
-                    <th>Thời gian bắt đầu - kết thúc </th>
-                    <th>Giá vé</th>
-                    <th>Thao tác</th>
-                </tr>
-                <% for(let i=0; i < showtime.length ;i++) { %>
-                    <tr>
-                        <td>
-                            <%= i+1 %>
-                        </td>
-                        <td>
-
-                            <%= showtime[i].Cinema.cinema_Name + ' - ' %>
-                                <%= showtime[i].Cinema.Cineplex.cineplex_Name %>
-
-                        </td>
-                        <td>
-                            <%= showtime[i].Film.film_Name %>
-                        </td>
-                        <td>
-
-                            <% var d=new Date(showtime[i].showtime_Date); %>
-                                <%= d.getDate(); %>
-                                    /
-                                    <%= d.getMonth()+1; %>
-                                        /
-                                        <%= d.getFullYear(); %>
-                        </td>
-                        <td>
-                            <% var begin=String(showtime[i].showtime_Begin).substr(0,5); var
-                                end=String(showtime[i].showtime_End).substr(0,5); var
-                                beginHour=parseInt(begin.substr(0,2)); var beginMinute=parseInt(begin.substr(3,2)); var
-                                filmHour=parseInt(showtime[i].Film.film_Time / 60); var
-                                filmMinute=parseInt(showtime[i].Film.film_Time % 60); var endHour=beginHour + filmHour;
-                                var endMinute=beginMinute + filmMinute; %>
-
-                                <%= begin %> -
-                                    <%= endHour %>:<%= endMinute %>
-                        </td>
-                        <td>
-                            <%= showtime[i].showtime_Price %>
-                        </td>
-                        <td>
-                            <b id="btn_update_showtime_<%= showtime[i].showtime_ID %>"><i class="fas fa-edit"></i></b>
-                            &nbsp;
-                            <a href="/admin/showtime/delete/<%= showtime[i].showtime_ID %>"
-                                onclick="return confirmAction()"><i class="fas fa-trash"></i></a>
-                        </td>
-                    </tr>
-                    <% } %>
-            </table>
-            <% } %>
-    </div>
-</div>
-
-<a id="btn_create_showtime" class="btn_create">Thêm suất chiếu</a>
-
-
-<!-- COPY FILE NOTEPAD vào -->
-<div id="create_showtime" class="modal">
-    <!-- Modal thêm -->
-    <span class="close" title="Close Modal" id="btn_close_showtime_create">
-        &times;
-    </span>
-
-    <!-- FORM THÊM SUẤT CHIẾU -->
-    <form action="/admin/showtime/create" method="POST" class="modal-content animate">
-        <div class="container">
-
-            <label>Rạp:</label>
-            <select name="cinemaID">
-                <% for(let i=0;i< allCinemas.length ; i++){ %>
-                    <option value="<%= allCinemas[i].cinema_ID %>">
-                        <%= allCinemas[i].cinema_Name + ' ' %> -
-                            <%= allCinemas[i].Cineplex.cineplex_Name %>
-                    </option>
-                    <% } %>
-            </select>
-
-            <label> Ngày chiếu:</label>
-            <input type="date" placeholder="Ngày chiếu" id="cinemaTimeShow_Date" name="showtimeDate" required /><br />
-
-            <label> Thời gian bắt đầu: </label>
-            <input type="time" name="beginTime" required> <br>
-
-
-            <label>Phim:</label>
-            <select name="filmID">
-                <% for(let i=0;i< allFilms.length ; i++){ %>
-                    <option value="<%= allFilms[i].film_ID %>">
-                        <%= allFilms[i].film_Name %>
-                    </option>
-                    <% } %>
-            </select>
-
-            <label> Giá vé: </label>
-            <input type="number" name="showtimePrice" required> <br>
-
-            <button type="submit" value="Thêm vào Film">
-                THÊM
-            </button>
-        </div>
-    </form>
-</div>
-
-<% for (let i=0;i < showtime.length ; i++ ) { %>
-    <div id="btn_update_showtime_main_<%= showtime[i].showtime_ID %>" class="modal">
-        <span class="close" title="Close Modal" id="btn_close_showtime_<%= showtime[i].showtime_ID %>">
-            &times;
-        </span>
-
-        <!-- FORM CẬP NHẬT -->
-        <form action="/admin/showtime/update/<%= showtime[i].showtime_ID %>" method="POST"
-            class="modal-content animate">
-            <div class="container">
-
-                <label>Rạp:</label>
-                <select name="cinemaID">
-                    <option value="none" selected disabled hidden>
-                        Thay đổi rạp
-                    </option>
-                    <% for(let i=0;i< allCinemas.length ; i++){ %>
-                        <option value="<%= allCinemas[i].cinema_ID %>">
-                            <%= allCinemas[i].cinema_Name + ' ' %> -
-                                <%= allCinemas[i].Cineplex.cineplex_Name %>
-                        </option>
-                        <% } %>
-                </select>
-
-                <label> Ngày chiếu:</label>
-                <input type="text" value="<%= showtime[i].showtime_Date %>" id="cinemaTimeShow_Date" readonly
-                    disabled /><br />
-
-                <label> Thay đổi ngày chiếu:</label>
-                <input type="date" placeholder="Ngày chiếu" id="cinemaTimeShow_Date" name="showtimeDate"><br>
-
-                <label style="margin-right: 86.29px;"> Thời gian bắt đầu: </label>
-                <input style="max-width: 113.15px;max-height: 28.4px;" type="text"
-                    value="<%= beginHour%>:<%= beginMinute%> " disabled> <br>
-                <label style="margin-right: 20px;"> Thay đổi thời gian bắt đầu: </label>
-                <input type="time" name="beginTime"> <br><br>
-
-
-                <label>Phim:</label>
-                <select name="filmID">
-                    <option value="none" selected disabled hidden>
-                        Thay đổi phim
-                    </option>
-                    <% for(let i=0;i< allFilms.length ; i++){ %>
-                        <option value="<%= allFilms[i].film_ID %>">
-                            <%= allFilms[i].film_Name %>
-                        </option>
-                        <% } %>
-                </select>
-
-                <label> Giá vé: </label>
-                <input type="number" value="<%= showtime[i].showtime_Price %>" name="showtimePrice" required> <br>
-
-                <button type="submit" value="Cập nhật suất chiếu" class="insertbtn">
-                    CẬP NHẬT
-                </button>
-            </div>
-
-        </form>
-
-    </div>
+<% if(typeof(crud_error) !='undefined' ) { %>
+    <div id="crud_error" value="<%= crud_error %>" hidden></div>
     <% } %>
+        <a id="btn_create_showtime" class="btn_create">Thêm suất chiếu</a>
+        <h1 style="text-align: center;font-weight: 600">DANH SÁCH SUẤT CHIẾU</h1>
 
+
+        <div class="container">
+            <div id="table">
+                <% if(showtime) { %>
+                    <table>
+                        <tr>
+                            <th>STT</th>
+                            <th>Rạp - Cụm rạp</th>
+                            <th>Phim</th>
+                            <th>Ngày chiếu </th>
+                            <th>Thời gian bắt đầu - kết thúc </th>
+                            <th>Giá vé</th>
+                            <th>Thao tác</th>
+                        </tr>
+                        <% for(let i=0; i < showtime.length ;i++) { %>
+                            <tr>
+                                <td>
+                                    <%= i+1 %>
+                                </td>
+                                <td>
+
+                                    <%= showtime[i].Cinema.cinema_Name + ' - ' %>
+                                        <%= showtime[i].Cinema.Cineplex.cineplex_Name %>
+
+                                </td>
+                                <td>
+                                    <%= showtime[i].Film.film_Name %>
+                                </td>
+                                <td>
+
+                                    <% var d=new Date(showtime[i].showtime_Date); %>
+                                        <%= d.getDate(); %>
+                                            /
+                                            <%= d.getMonth()+1; %>
+                                                /
+                                                <%= d.getFullYear(); %>
+                                </td>
+                                <td>
+                                    <%= showtime[i].showtime_Begin.substr(0,5) %> -
+                                        <%= showtime[i].showtime_End.substr(0,5) %>
+                                </td>
+                                <td>
+                                    <%= showtime[i].showtime_Price %> đ
+                                </td>
+                                <td>
+                                    <b id="btn_update_showtime_<%= showtime[i].showtime_ID %>"><i
+                                            class="fas fa-edit"></i></b>
+                                    &nbsp;
+                                    <a href="/admin/showtime/delete/<%= showtime[i].showtime_ID %>"
+                                        onclick="return confirmAction()"><i class="fas fa-trash"></i></a>
+                                </td>
+                            </tr>
+                            <% } %>
+                    </table>
+                    <% } %>
+            </div>
+        </div>
+
+
+
+        <!-- COPY FILE NOTEPAD vào -->
+        <div id="create_showtime" class="modal">
+            <!-- Modal thêm -->
+            <span class="close" title="Close Modal" id="btn_close_showtime_create">
+                &times;
+            </span>
+
+            <!-- FORM THÊM SUẤT CHIẾU -->
+            <form action="/admin/showtime/create" method="POST" class="modal-content animate">
+                <div class="container">
+
+                    <label>Rạp:</label>
+                    <select name="cinemaID">
+                        <% for(let i=0;i< allCinemas.length ; i++){ %>
+                            <option value="<%= allCinemas[i].cinema_ID %>">
+                                <%= allCinemas[i].cinema_Name + ' ' %> -
+                                    <%= allCinemas[i].Cineplex.cineplex_Name %>
+                            </option>
+                            <% } %>
+                    </select>
+
+                    <label> Ngày chiếu:</label>
+                    <input type="date" id="cinemaTimeShow_Date" name="showtimeDate" required /><br />
+
+                    <label> Thời gian bắt đầu: </label>
+                    <input type="time" name="beginTime" required> <br>
+
+
+                    <label>Phim:</label>
+                    <select name="filmID">
+                        <% for(let i=0;i< allFilms.length ; i++){ %>
+                            <option value="<%= allFilms[i].film_ID %>">
+                                <%= allFilms[i].film_Name %>
+                            </option>
+                            <% } %>
+                    </select>
+
+                    <label> Giá vé: </label>
+                    <input type="number" name="showtimePrice" required> <br>
+
+                    <button type="submit" value="Thêm vào Film">
+                        THÊM
+                    </button>
+                </div>
+            </form>
+        </div>
 
         <% for (let i=0;i < showtime.length ; i++ ) { %>
-            <script>
-                $(document).ready(function () {
-                    $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
+            <div id="btn_update_showtime_main_<%= showtime[i].showtime_ID %>" class="modal">
+                <span class="close" title="Close Modal" id="btn_close_showtime_<%= showtime[i].showtime_ID %>">
+                    &times;
+                </span>
 
-                    $("#btn_update_showtime_<%= showtime[i].showtime_ID %>").click(function () {
-                        $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").show();
-                    });
+                <!-- FORM CẬP NHẬT -->
+                <form action="/admin/showtime/update/<%= showtime[i].showtime_ID %>" method="POST"
+                    class="modal-content animate">
+                    <div class="container">
 
-                    $("#btn_close_showtime_1_<%= showtime[i].showtime_ID %>").click(function () {
-                        $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
-                    });
-                    $("#btn_close_showtime_<%= showtime[i].showtime_ID %>").click(function () {
-                        $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
-                    });
+                        <label>Rạp - Cụm rạp:</label>
+                        <select name="cinemaID">
+                            <option value="<%= showtime[i].Cinema.cinema_ID %>" selected>
+                                <%= showtime[i].Cinema.cinema_Name + ' ' %> -
+                                    <%= showtime[i].Cinema.Cineplex.cineplex_Name %>
+                            </option>
+                            <% for(let i=0;i< allCinemas.length ; i++){ %>
+                                <option value="<%= allCinemas[i].cinema_ID %>">
+                                    <%= allCinemas[i].cinema_Name + ' ' %> -
+                                        <%= allCinemas[i].Cineplex.cineplex_Name %>
+                                </option>
+                                <% } %>
+                        </select>
 
-                });
-            </script>
+                        <label> Ngày chiếu:</label>
+                        <input type="date" value="<%= showtime[i].showtime_Date %>" id="cinemaTimeShow_Date"
+                            name="showtimeDate"><br>
+
+                        <label style="margin-right: 20px;"> Thời gian bắt đầu: </label>
+                        <input value="<%= showtime[i].showtime_Begin %>" type="time" name="beginTime"
+                            style="margin-top: 10px;">
+                        <br><br>
+
+                        <label>Phim:</label>
+                        <select name="filmID">
+                            <option value="<%= showtime[i].Film.film_ID %>" selected>
+                                <%= showtime[i].Film.film_Name %>
+                            </option>
+                            <% for(let i=0;i< allFilms.length ; i++){ %>
+                                <option value="<%= allFilms[i].film_ID %>">
+                                    <%= allFilms[i].film_Name %>
+                                </option>
+                                <% } %>
+                        </select>
+
+                        <label> Giá vé: </label>
+                        <input type="number" value="<%= showtime[i].showtime_Price %>" name="showtimePrice" required>
+                        <br>
+
+                        <button type="submit" value="Cập nhật suất chiếu" class="insertbtn">
+                            CẬP NHẬT
+                        </button>
+                    </div>
+                </form>
+            </div>
             <% } %>
+
+                <% for (let i=0;i < showtime.length ; i++ ) { %>
+                    <script>
+                        $(document).ready(function () {
+                            $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
+
+                            $("#btn_update_showtime_<%= showtime[i].showtime_ID %>").click(function () {
+                                $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").show();
+                            });
+
+                            $("#btn_close_showtime_1_<%= showtime[i].showtime_ID %>").click(function () {
+                                $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
+                            });
+                            $("#btn_close_showtime_<%= showtime[i].showtime_ID %>").click(function () {
+                                $("#btn_update_showtime_main_<%= showtime[i].showtime_ID %>").hide();
+                            });
+
+                        });
+                    </script>
+                    <% } %>
+
+                        <script>
+                            var crud_error = document.getElementById("crud_error").getAttribute('value');
+                            if (crud_error) {
+                                alert(crud_error);
+                            }
+                        </script>
